testing config changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
 author: "Rafael"
 tagline: "Rafael's website"
-description: "..."
+description: "...testing my website"
 keywords: "Pineapple, Pineapple Pizza, Pineapple House"
 email: "pineapple@example.com"
 linkedin: "https://www.linkedin.com/"
