--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # User config
-author: "Rafael Della Coletta, Ph.D. candidate at University of Minnesota"
+author: "Rafael Della Coletta"
 tagline: "about me"
 description: "Driven computational biologist focused on delivering improved and resilient crops to maintain food supply and progress towards healthier societies and ecosystems."
 email: "della028@umn.edu"
+scholar: "https://scholar.google.com/citations?user=9-pKdFkAAAAJ&hl=en"
 linkedin: "https://www.linkedin.com/in/rafael-della-coletta/"
 twitter: "https://twitter.com/rafael_coletta"
 github: "https://github.com/rdcoletta"
